src/prefs/snapshots/bletchmame__prefs__test__fresh.snap
---
source: src/prefs/mod.rs
expression: prefs
---
{
  "paths": {
    "plugins": [
      "$(BLETCHMAMEPATH)\\plugins",
      "$(MAMEPATH)\\plugins"
    ],
    "artwork": [
      "$(MAMEPATH)\\artwork"
    ],
    "bgfx": [
      "$(MAMEPATH)\\bgfx"
    ]
  },
  "isFullscreen": false,
  "prescale": 1,
  "itemsColumns": [
    {
      "type": "name",
      "sort": "ascending",
      "width": 100.0
    },
    {
      "type": "sourceFile",
      "width": 155.0
    },
    {
      "type": "description",
      "width": 400.0
    },
    {
      "type": "year",
      "width": 80.0
    },
    {
      "type": "provider",
      "width": 180.0
    }
  ],
  "collections": [
    {
      "type": "builtin",
      "subtype": "all"
    },
    {
      "type": "folder",
      "name": "Favorites"
    }
  ],
  "history": [
    {
      "type": "builtin",
      "subtype": "all"
    }
  ],
  "showStopWarning": true
}
